--- a/style.css
+++ b/style.css
@@ -1,32 +1,13 @@
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
+/* Your existing styles */
+/* ... */
 
-main {
-    width: 600px; /* Adjusted to match the image width */
-    height: 500px;
-    margin: 100px auto 0 auto; /* Simplified margin for centering */
-    box-shadow: 0px 0px 3px grey;
-    position: relative;
+.slider {
     overflow: hidden;
-} 
+    width: 100%;
+    margin-bottom: 20px;
+}
 
 .slide {
     width: 100%;
-    height: 100%;
-    transition: 1s;
-    position: absolute;
-}
-
-.nav {
-    text-align: center;
-    margin-top: 15px;
-
-}
-
-.nav button{
-    font-size: 25px;
-    padding: 5px; 
+    display: none;
 }
