--- a/style.css
+++ b/style.css
@@ -1,85 +1,32 @@
-/* Global styles */
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f2f2f2;
-    text-align: center;
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
-/* Container styles */
-#container {
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    width: 60%;
-    margin: 100px auto;
-}
-
-/* Slider styles */
-.slider {
-    display: flex;
+main {
+    width: 600px; /* Adjusted to match the image width */
+    height: 500px;
+    margin: 100px auto 0 auto; /* Simplified margin for centering */
+    box-shadow: 0px 0px 3px grey;
+    position: relative;
     overflow: hidden;
-    max-width: 100%;
-}
+} 
 
-.slider img {
-    width: 100%;
-    height: auto;
-    opacity: 0;
-    transition: opacity 0.5s;
-}
-
-.slider img:not(:first-child) {
-    transform: translateX(100%);
-}
-
-/* Surprise button styles */
-#surpriseButton {
-    background-color: #ff5733;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    font-size: 18px;
-    cursor: pointer;
-    margin-top: 20px;
-}
-
-/* Fireworks styles */
-#fireworks {
-    display: none;
-    position: absolute;
+.slide {
     width: 100%;
     height: 100%;
-    top: 0;
-    left: 0;
-    background: transparent;
-    z-index: 9999;
+    transition: 1s;
+    position: absolute; 
 }
 
-@keyframes fireworks {
-    0% {
-        opacity: 0;
-    }
-    20% {
-        opacity: 1;
-        transform: translate(0, -30px);
-    }
-    80% {
-        opacity: 1;
-        transform: translate(0, -60px);
-    }
-    100% {
-        opacity: 0;
-        transform: translate(0, -90px);
-    }
+.nav {
+    text-align: center;
+    margin-top: 15px;
+
 }
 
-/* Countdown styles */
-#countdown {
-    font-size: 32px;
-}
-
-/* Message styles */
-#message {
-    font-size: 24px;
+.nav button{
+    font-size: 25px;
+    padding: 5px; 
 }
